--- a/psc/templates/psc/dco_incident_add_form.html
+++ b/psc/templates/psc/dco_incident_add_form.html
@@ -172,6 +172,7 @@
                         </div>
                         <div class='third'>
                             <div class="options buttons">
+																{% csrf_token %}
 																<input type="submit" name="submit" value="Save">
                             </div>
                         </div>
