--- a/psc/templates/psc/vr_incident_add_form.html
+++ b/psc/templates/psc/vr_incident_add_form.html
@@ -223,6 +223,7 @@
                         </div>
                         <div class='third'>
                             <div class='options buttons'>
+																{% csrf_token %}
 																<input type="submit" name="submit" value="Save">
                             </div>
                         </div>
