--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -113,7 +113,7 @@
 {%- for msg in flash_msgs -%}
     <div class="alert alert-info alert-dismissable">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      {{ msg|safe }}
+      {{ msg }}
     </div>
 {%- endfor -%}
   </div>
