--- a/apollo/frontend/templates/frontend/macros/send_message.html
+++ b/apollo/frontend/templates/frontend/macros/send_message.html
@@ -27,7 +27,7 @@
   </div>
 </div>
 <script type="text/javascript">
-  var close_modal_timeout, alert_timeout;
+  var close_modal_timeout, alert_timeout, csrftoken = $('meta[name=csrf-token]').attr('content');
 
   $('#send_message_modal_btn').click(function () {
     clearTimeout(close_modal_timeout);
@@ -53,11 +53,14 @@
       $.ajax({
         url: "{{ request.url }}",
         type: 'POST',
-        data: {message: message, action: 'send_message'},
-        beforeSend: function (xhr) {
+        data: {message: message, action: 'send_message', },
+        beforeSend: function (xhr, settings) {
           $('#message').attr('disabled', 'disabled');
           $('#send').attr('disabled', 'disabled');
           $('#loader').attr('style', 'visibility:visible;');
+          if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
+            xhr.setRequestHeader("X-CSRFToken", csrftoken);
+          }
         }
       })
       .done(function (data) {
